--- a/flaskinventory/templates/view/channel.html
+++ b/flaskinventory/templates/view/channel.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-9">
                 <div class="card-body">
-                    <p class="card-text">Total: <a href="{{ url_for('inventory.advanced_query') }}">{{ entry.num_sources }}</a></p>
+                    <p class="card-text">Total: <a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a></p>
                 </div>
             </div>
         </div>
