--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -7,7 +7,7 @@
         </a>
         <var id="result-container" class="result-container"></var>
 
-        <form class="w-50" id="search-everything" name="search-everything" method="GET" action="{{ url_for('inventory.search') }}">
+        <form class="w-50" id="search-everything" name="search-everything" method="GET" action="{{ url_for('view.search') }}">
             <div class="typeahead__container">
                 <div class="">
                     <div class="typeahead__query input-group">
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </form>
-        <!-- <form class="w-50" id="search-everything" name="search-everything" method="GET" action="{{ url_for('inventory.search') }}">
+        <!-- <form class="w-50" id="search-everything" name="search-everything" method="GET" action="{{ url_for('view.search') }}">
                     <div class="typeahead__query input-group">
                         <input class="form-control" name="query" id="searchbar-top" placeholder="Search everything..." autocomplete="off">
                         <button class="btn btn-outline-success" type="submit"> <i class="fas fa-search"></i>
@@ -37,7 +37,7 @@
             labelField: 'name',
             searchField: 'name',
             load: function(query, callback) {
-                var url = "{{ url_for('inventory.quicksearch') }}" + "?q=" + encodeURIComponent(query);
+                var url = "{{ url_for('view.quicksearch') }}" + "?q=" + encodeURIComponent(query);
                 fetch(url)
                     .then(response => response.json())
                     .then(json => {
@@ -67,7 +67,7 @@
         <ul class="nav nav-pills">
             {% if current_user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('records.new_entry') }}" tabindex="-1"><i class="fas fa-plus-circle me-2"></i>Add Entry</a>
+                <a class="nav-link" href="{{ url_for('add.new_entry') }}" tabindex="-1"><i class="fas fa-plus-circle me-2"></i>Add Entry</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
