--- a/flaskinventory/templates/view/archive.html
+++ b/flaskinventory/templates/view/archive.html
@@ -37,7 +37,7 @@
             <dt class="col-sm-3 mb-4"><h5>Sources included</h5></dt>
             <dd class="col-sm-9 mb-4"><small class="text-muted">Shows how many of the sources listed in this inventory are available in the archive.</small></dd>
             <dt class="col-sm-3">Total</dt>
-            <dd class="col-sm-9"><a href="{{ url_for('inventory.advanced_query') }}">{{ entry.num_sources }}</a>
+            <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a>
             </dd>
         </dl>
     </div>
