--- a/flaskinventory/templates/view/paper.html
+++ b/flaskinventory/templates/view/paper.html
@@ -43,7 +43,7 @@
             <dd class="col-sm-9 mb-4"><small class="text-muted">Shows which sources where studied in this publication.</small></dd>
             <dt class="col-sm-3"></dt>
             <dd class="col-sm-9">{% for source in entry.sources_included %}
-                <p class="card-text"><a href="{{ url_for('inventory.view_source', unique_name=source.unique_name) }}">{{source.name}} ({{source.channel.name}})</a> <span class="text-muted mx-3">{% if source.get('sources_included|from') %} from: {{ source.get('sources_included|from') }}</span>{%endif%}
+                <p class="card-text"><a href="{{ url_for('view.view_source', unique_name=source.unique_name) }}">{{source.name}} ({{source.channel.name}})</a> <span class="text-muted mx-3">{% if source.get('sources_included|from') %} from: {{ source.get('sources_included|from') }}</span>{%endif%}
                     {% if source.get('sources_included|to') %}
                     <span class="text-muted mx-3">to: {{ source.get('sources_included|to') }}</span> {%endif%}{% endfor %}
             </dd>
