--- a/flaskinventory/templates/view/source_sidebar.html
+++ b/flaskinventory/templates/view/source_sidebar.html
@@ -5,7 +5,7 @@
     <div class="list-group list-group-flush border-bottom scrollarea">
         {% if related %} 
         {% for item in related %}
-        <a href="{{ url_for('inventory.view_source', unique_name=item.unique_name) }}" class="list-group-item list-group-item-action py-3 lh-tight">
+        <a href="{{ url_for('view.view_source', unique_name=item.unique_name) }}" class="list-group-item list-group-item-action py-3 lh-tight">
             <div class="d-flex w-100 align-items-center justify-content-between">
                 <strong class="mb-1"><i class="icon-{{ item.channel.unique_name }} color-{{ item.channel.unique_name }} fa-fw mx-1" alt="{{ item.channel.name }}"></i>
                     {{ item.name }} ({{item.channel.name}})</strong>
