--- a/flaskinventory/templates/view/source.html
+++ b/flaskinventory/templates/view/source.html
@@ -31,7 +31,7 @@
             <dd class="col-sm-9"><a href="{{ url_for('view.view_channel', unique_name=entry.channel.unique_name) }}">{{entry.channel.name}}</a> </dd>
             {% if entry.channel_url %} 
             <dt class="col-sm-3">Link to Source</dt>
-            <dd class="col-sm-9 mb-4">
+            <dd class="col-sm-9">
                     {% if entry.channel.unique_name == 'twitter' %}
                     <a class="" target="_blank" href="https://twitter.com/{{ entry.channel_url }}">
                     https://twitter.com/{{ entry.channel_url }}
@@ -50,7 +50,7 @@
             {% endif %}
             {% if entry.verified_account %}
             <dt class="col-sm-3">Verified Account</dt>
-            <dd class="col-sm-9 mb-4">{{ entry.verified_account }}</dd>
+            <dd class="col-sm-9">{{ entry.verified_account }}</dd>
             {% endif %}
             {% if entry.wikidataID %}
             <dt class="col-sm-3">Wikidata</dt>
