--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -9,7 +9,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"> -->
-    <script src="https://kit.fontawesome.com/077062ce2c.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/077062ce2c.js" crossorigin="anonymous"></script> -->
+    
+    <!-- Font Awesome -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',  filename='css/solid.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',  filename='css/brands.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',  filename='css/fontawesome.min.css') }}">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
