--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous"> -->
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"> -->
     <!-- <script src="https://kit.fontawesome.com/077062ce2c.js" crossorigin="anonymous"></script> -->
     
@@ -17,18 +19,18 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',  filename='css/fontawesome.min.css') }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- <script src="{{ url_for('static',  filename='/js/bloodhound.min.js') }}"></script> -->
     <!-- <script src="{{ url_for('static',  filename='/js/typeahead.bundle.min.js') }}"></script> -->
-    <script src="{{ url_for('static',  filename='js/jquery.typeahead.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.typeahead.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='js/jquery.typeahead_edited.css') }}">
 
     <!-- Tom Select -->
-    <link href="https://cdn.jsdelivr.net/npm/tom-select@1.7.6/dist/css/tom-select.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/tom-select@1.7.6/dist/js/tom-select.complete.min.js"></script>
-    <link href="{{ url_for('static',  filename='js/tom-select.bootstrap5.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/tom-select.min.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='js/tom-select.complete.min.js') }}"></script>
+    <link href="{{ url_for('static', filename='css/tom-select.bootstrap5.css') }}" rel="stylesheet">
 
     <script type=text/javascript>
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
@@ -130,7 +132,9 @@
         </footer>
         </div>
         <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script> -->
+        <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+
         <script src="{{ url_for('static',  filename='js/search_everything.js') }}"></script>
         <!-- Enable Bootstrap Tooltips Globally -->
         <script>
