--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -7,12 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous"> -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"> -->
-    <!-- <script src="https://kit.fontawesome.com/077062ce2c.js" crossorigin="anonymous"></script> -->
-    
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',  filename='css/solid.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',  filename='css/brands.css') }}">
@@ -20,8 +16,11 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    
+    <!-- AJAX -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <!-- Typeahead -->
     <!-- <script src="{{ url_for('static',  filename='/js/bloodhound.min.js') }}"></script> -->
     <!-- <script src="{{ url_for('static',  filename='/js/typeahead.bundle.min.js') }}"></script> -->
     <script src="{{ url_for('static', filename='js/jquery.typeahead.js') }}"></script>
@@ -131,11 +130,12 @@
                     may be made of the information contained herein.</p>
         </footer>
         </div>
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script> -->
+        <!-- Bootstrap Bundle with Popper -->
         <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
 
+        <!-- Typeahead script searchbar -->
         <script src="{{ url_for('static',  filename='js/search_everything.js') }}"></script>
+        
         <!-- Enable Bootstrap Tooltips Globally -->
         <script>
             var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
