updated consent form text

--- a/flaskinventory/templates/main/privacy.html
+++ b/flaskinventory/templates/main/privacy.html
@@ -14,28 +14,28 @@
 
         <p>
             This data collection effort is part of the <a href="https://www.opted.eu" target="_blank">EU-funded Project OPTED</a>, where researchers work towards the creation of a new European research infrastructure for the study of political communication
-            in Europe. For this particular crowd-coding project, we would like to invite you to help us collect information about various European news sources.
+            in Europe. For this particular crowd-coding project, we would like to invite you to help us collect information about various European news sources. 
+            Before you start, we would like to draw your attention to a few points. We would kindly ask you to read the following information carefully.
         </p>
 
         <h2>Purpose of the project</h2>
         <p>The ultimate goal is an inventory that helps researchers, journalists, and the interested public to extract in-depth knowledge about the European media landscape in a smooth and straightforward manner.</p>
         <p>Aiming at curating and organizing the very rich but also highly fragmented European media landscape in an inventory, we are immensely grateful for your support!</p>
         <h2>Procedures</h2>
-        <p>To collect information on European news sources, we have prepared a questionnaire. By filling out the questionnaire you contribute information on individual news sources.</p>
-        <p>Before you start, we would like to draw your attention to a few points.</p>
-        <h3>Account as requirement to contribute data about news sources:</h3>
-        <p>You need to create an account on this platform before you can contribute data to the inventory and before you can fill out the questionnaire.</p>
+        <p>To collect information on European news sources, we have prepared a questionnaire. By filling out the questionnaire you contribute information on individual news sources. Each source is added via filling out a new questionnaire.</p>
+        <h3>Personal Account as requirement to contribute data about news sources:</h3>
+        <p>You need to create an account on this platform before you can contribute data to the inventory and before you can fill out the questionnaire. Please note the following:</p>
         <ul>
             <li>If you choose to create an account on this platform you need to provide an email address. We will store your email address for administrative purposes (i.e., logging in to this platform, administering your account, correspondence strictly
                 necessary for operation). We will not share your email address with any third-parties and it is not publicly visible.</li>
             <li>Any other personal information you add to your account (e.g., your affiliation) is voluntary and optional.</li>
             <li>We do not collect sensitive personal information.</li>
             <li>We reserve the right to publicly display a username next to the information about news sources that you entered. This username is initially randomly generated and assigned automatically to your account after registration. The username is unrelated
-                to the personal information that you provide (i.e. your email address and additional optional information). You may change the username according to your own preferences.</li>
+                to the personal information that you provide (i.e. your email address and additional optional information). You can change the username according to your own preferences.</li>
 
             <li>We reserve the right to store your IP address for administrative and analytical purposes (e.g. preventing SPAM, or creating usage statistics)</li>
-            <li>The personal information that you provide (i.e. your email address and additional optional information) will be deleted immediately if you choose to close your account.</li>
-            <li>Your participation is anonymous. We will keep all your data strictly confidential.</li>
+            <li>If you like you can close your account anytime.</li>
+            <li>The personal information that you provide (i.e. your email address and additional optional information) will be deleted immediately if you choose to close your account. The information that you provide about new sources will remain part of the inventory.</li>
         </ul>
         <h3>Once you have an account you can contribute data to the inventory by filling out the questionnaire:</h3>
         <ul>
@@ -45,20 +45,24 @@
         </ul>
         <h3>General:</h3>
         <ul>
-            <li>Data will be collected and processed exclusively on the basis of the legal provisions (&sect; 2f Abs 5 FOG; EU General Data Protection Regulation).</li>
+            <li>Data will be collected and processed exclusively on the basis of the legal provisions (EU General Data Protection Regulation (GDPR), § 7 Abs 2 Datenschutzgesetz (DSG))).</li>
             <li>This platform uses cookies that are strictly necessary for operation. We do not use any third-party cookies.</li>
             <li>Servers where data is stored and processed are in the European Union.</li>
         </ul>
-        <h2>Compensation for coders</h2>
-        <p>There is no monetary compensation for your contribution to the coding project.</p>
-        <h2>Accessing project outcomes</h2>
-        <p>For regular updates on the OPTED project you can also visit <a href="https://www.opted.eu" target="_blank" rel="noopener">https://www.opted.eu</a>.</p>
+        <h2>Potential discomforts and risks</h2>
+            <p>There are no anticipated risks to your participation in the crowd coding project. When you feel discomfort you can stop filling out the questionnaire anytime.</p>
+        <h2>Potential benefits to you and/or to society</h2>
+            <p>The information that you contribute about European news sources will be part of an inventory. Together with the information added by other coders the resulting database will serve as a resource for various search interests.</p>
+        <h2>Compensation for participants</h2>
+            <p>There is no monetary compensation for your contribution to the coding project.</p>
         <h2>Participation and withdrawal</h2>
-        <ul>
-            <li>Collecting data about news sources and contributing this data is voluntary. You can cancel the questionnaire at any time.</li>
-        </ul>
+            <p>Collecting data about news sources and contributing this data is voluntary. You can cancel the questionnaire at any time. The personal information that you provide (email address as a must and additional optional information) will be deleted immediately if you choose to close your account. The information that you provide about new sources will remain part of the inventory.</p>
+        <h2>Accessing project outomes</h2>
+            <p>It is likely that articles, reports, and academic publications will be produced based on the information gathered for the inventory. These publications are made publicly available on the OPTED project website: <a href="https://www.opted.eu" target="_blank">https://www.opted.eu</a>.</p>
         <h2>Further information</h2>
-        <p>If you have any questions about the content, purpose or research ethics of this crowd coding project, please feel free to contact <a href="mailto:info@opted.eu" target="_blank" rel="noopener">info@opted.eu</a>.</p>
+            <p>If you have any questions or concerns about the content, purpose or research ethics of this crowd coding project, please feel free to contact the project manager <a href="mailto:fabienne.lind@univie.ac.at">Fabienne Lind</a>. Should you have comments on the coding experience please contact the technical manager <a href="paul.balluff@univie.ac.at">Paul Balluff</a>. You can also contact the work package leaders Prof. Hajo Boomgaarden or Prof. Annie Waldherr. </p>
+            <p>All comments or complaints will be treated in strict confidence. </p>
+            <p>For legal questions in connection with the General Data Protection Regulation (GDPR), please contact the data protection officers of the University of Vienna, Dr. Daniel Stanonik, LL.M. or Dr. Karsten Kinast, LL.M. (verarbeitungsverzeichnis@univie.ac.at). You also have the right to lodge a complaint with the data protection authority (e.g., via dsb@dsb.gv.at)..</p>
     </div>
 </div>
 {% endblock content %}
