comma separated subunits

--- a/flaskinventory/templates/view/source.html
+++ b/flaskinventory/templates/view/source.html
@@ -153,6 +153,7 @@
             <dd class="col-sm-9">
                 {% for subunit in entry.geographic_scope_subunit %}
                 <span class="">{{ subunit.name }}</span>
+                    {{ ", " if not loop.last else "" }}
                 {% endfor %}
                 </dd>
                 
