--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -74,6 +74,9 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="{{ url_for('users.profile') }}" tabindex="-1"><i class="fas fa-id-badge me-2 fa-fw"></i>Profile</a></li>
                     {% if current_user.user_role >= 2 %}
+                    <li><a href="{{ url_for('users.my_entries') }}" class="dropdown-item" tabindex="-1">
+                        <i class="fas fa-tasks me-2 fa-fw"></i>My Entries
+                    </a></li>
                     <li><a class="dropdown-item" href="#"><i class="fas fa-glasses me-2 fa-fw"></i>Review Entries</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('users.invite') }}"><i class="fas fa-envelope-open-text me-2 fa-fw"></i>Invite New User</a></li>
                     {% endif %}
