--- a/flaskinventory/templates/users/profile_sidebar.html
+++ b/flaskinventory/templates/users/profile_sidebar.html
@@ -3,6 +3,9 @@
         <span class="fs-5 fw-semibold">Tasks</span>
     </a>
     <div class="list-group">
+        <a href="{{ url_for('users.my_entries') }}" type="button" class="list-group-item list-group-item-action">
+            <i class="fas fa-tasks me-3 fa-fw"></i>My Entries
+        </a>
         <a href="{{ url_for('add.new_entry') }}" type="button" class="list-group-item list-group-item-action">
             <i class="fas fa-plus-circle me-3 fa-fw"></i>Add new entry
         </a>
