--- a/flaskinventory/templates/view/channel.html
+++ b/flaskinventory/templates/view/channel.html
@@ -13,7 +13,7 @@
             <div class="col-md-3">
                 <div class="card-body">
                     <h5 class="card-title">General Information</h5>
-                    <p class="card-text"></p>
+                    <p class="card-text">{% include "view/elements/entry_status.html" %}</p>
 
                 </div>
 
