--- a/flaskinventory/templates/view/source_sidebar.html
+++ b/flaskinventory/templates/view/source_sidebar.html
@@ -5,6 +5,7 @@
     <div class="list-group list-group-flush border-bottom scrollarea">
         {% if related %} 
         {% for item in related %}
+            {% if item.entry_review_status == "accepted" %}
         <a href="{{ url_for('view.view_source', unique_name=item.unique_name) }}" class="list-group-item list-group-item-action py-3 lh-tight">
             <div class="d-flex w-100 align-items-center justify-content-between">
                 <strong class="mb-1"><i class="icon-{{ item.channel.unique_name }} color-{{ item.channel.unique_name }} fa-fw mx-1" alt="{{ item.channel.name }}"></i>
@@ -13,6 +14,7 @@
             </div>
             <div class="col-10 mb-1 small"></div>
         </a>
+            {% endif %}
         {% endfor %} 
 
         {% else %}
