--- a/flaskinventory/templates/view/paper.html
+++ b/flaskinventory/templates/view/paper.html
@@ -13,7 +13,7 @@
     <div class="border rounded p-3">
         <dl class="row">
             <dt class="col-sm-3 mb-4"><h5>About</h5></dt>
-            <dd class="col-sm-9 mb-4"><small class="text-muted"></small></dd>
+            <dd class="col-sm-9 mb-4">{% include "view/elements/entry_status.html" %}</dd>
             {% if entry.published_date %}
             <dt class="col-sm-3">Published</dt>
             <dd class="col-sm-9">{{ entry.published_date.strftime('%Y') }}
