make field hidden

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -20,7 +20,7 @@
     <fieldset id="section-general">
         <h3 class="mb-4">General Information</h3>
         <div class="mb-5 form-group">
-            <input type="text" name="uid" id="uid-hidden" readonly value='_:newsource'>
+            <input type="text" name="uid" id="uid-hidden" value='_:newsource' readonly hidden>
             <label for="channel-select" class="form-label fw-bold fs-5">Through which channel is the news source distributed?</label>
             <select name="channel" id="channel-select" class="form-select form-select-lg" aria-describedby="channel-select-feedback" required>
                         <option value="">Select Channel...</option>
